<resources>
    <string name="app_name" translatable="false">OverThrown</string>
    <string name="New_game">Start</string>
    <string name="Contin">Continue</string>
    <string name="Settings">Settings</string>
    <string name="About_developers">Developers</string>
    <string name="Exit">Exit</string>
    <string name="title_activity_scrolling">Prologue</string>
    <string name="story" translatable="false">
        \t[Прежде чем вы вступите в мир OverThrown: Многие вещи не столь очевидны, как кажутся. Чтобы подробнее разузнать о чём-либо, будь то кнопка, надпись или оружие, коснитесь и удерживайте этот элемент, и тогда появится окно с пояснением или описанием.]\n\n\n
        \t\t\tПролог\n\n
        \tВы законный наследник престола королевства Четырёх земель.\n
        \tНарод обожал Вас за мудрые решения, справедливость и человеческие качества.\n
        \tНо в один день всё изменилось: Вас оклеветали, предоставив фальсифицированные, но убедительные доказательства преступлений, которых вы, разумеется, не совершали.\n
        \tНарод обвинил Вас и некоторых других высокопоставленных господ во множественных судебных ошибках: ошибочные казни, неверные сроки заключения и каторги, получение взяток за смягчение приговора.\n
        \tВсё это было очень убедительной, но всё-таки ложью.\n
        \tРазгорелись волнения, начались мятежи в ходе которых произошёл государственный переворот, вы оказались в тюрьме, ожидая смертной казни. В один день свершилась казнь всех обвинённых в этом деле.\n
        \tНа казни выяснилось, что виновник волнений и бессмысленной гибели многих людей - Ваш брат.\n
        \tВас вешали в числе последних и наёмники, работавшие на Вашего брата и организовавшие революцию, не удосужились проверить пульс, решили, что вы мертвы и погрузили Ваше тело в телегу с трупами.\n
        \tВы приходите в себя, лёжа на горе гниющих тел. На вас рваный балахон, а из оружия только лежавшая в нескольких метрах палка. Вам предстоит пройти долгий и нелёгкий путь, чтобы вернуть себе престол. Вы готовы?\n
        \n\n\t[Нажмите для продолжения...]\n\n\n
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_game" translatable="false">MainGame</string>
    <string name="title_activity_enter_name" translatable="false">EnterName</string>
    <string name="word_easy">Easy</string>
    <string name="word_normal">Normal</string>
    <string name="word_hard">Hard</string>
    <string name="word_class1">Warrior [150 HP, 0 Mana]</string>
    <string name="word_class2">Mage [100 HP, 10 Mana]</string>
    <string name="change_name_text">It is necessery that nobody know who you are. How do you want to be called?</string>
    <string name="enter_name_string">Enter Name</string>
    <string name="choose_difficult_string">Choose difficult</string>
    <string name="choose_class_string">Choose class</string>
    <string name="map_word">Map</string>
    <string name="inv_word">Inventory</string>
    <string name="yes_word">Let the Adventure Begin!</string>
    <string name="get_lost_string">%1$s, You definitely got lost. Try another way.</string>
    <string name="winter_walk_string" translatable="false">%1$s , Вы бредёте по снежной долине, ни на что не натыкаясь.</string>
    <string name="desert_walk_string" translatable="false">%1$s , Вы бредёте по пустыне, ни на что не натыкаясь.</string>
    <string name="forest_walk_string" translatable="false">%1$s , Вы бредёте по лесу, ни на что не натыкаясь.</string>
    <string name="mountains_walk_string" translatable="false">%1$s, Вы бредёте по горам, ни на что не натыкаясь.</string>
    <string name="magnus_event_string" translatable="false">%1$s, Вы натыкаетесь на великую башню Магнуса. Потрясающее явление и очень редкое.</string>
    <string name="bandits_event_string" translatable="false">%1$s, неожиданно на Вас выскакивает шайка бандитов. Ничего не остаётся, кроме как принять бой.</string>
    <string name="tavern_event_string" translatable="false">%1$s, перед Вами врдуг появляется уютная таверна.</string>
    <string name="cave_event_string" translatable="false">%1$s, Вы выходите прямиком к тёмной пещере.</string>
    <string name="rainbow_event_string" translatable="false">%1$s, Вы видите радугу. Мило.</string>
    <string name="enter_word">Enter</string>
    <string name="strength_abilities">Strength</string>
    <string name="perception_abilities">Perception</string>
    <string name="endurance_abilities">Endurance</string>
    <string name="charisma_abilities">Charisma</string>
    <string name="intelligence_abilities">Intelligence</string>
    <string name="agility_abilities">Agility</string>
    <string name="luck_abilities">Luck</string>
    <string name="item_icon_string">Item Icon</string>
    <string name="equipped_icon_string">Equipped Icon</string>
    <string name="abilities_choice">Manage abilities points [%1$d]</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="zero_amount" translatable="false">[5]</string>
    <string name="attack_word">Attack</string>
    <string name="trade_sum_string">SUMMARY</string>
    <string name="trade_string">Trade</string>
    <string name="journal_word">Journal</string>
    <string name="main_quest_first_step" translatable="false">Вам нужна какая-то невероятная сила, чтобы победить брата… Попробуйте поспрашивать барменов в тавернах.</string>
    <string name="main_quest_second_step" translatable="false">Бармен рассказал о какой-то силе, известной магу Магнусу… Вам непременно нужно его навестить.</string>
    <string name="quest_path_string">Quest Path</string>
    <string name="already_ten_string" translatable="false">Нельзя вложить более 10 очков в навык</string>
    <string name="lack_of_points_string" translatable="false">У вас закончились очки</string>
    <string name="lack_of_strength_string" translatable="false">У вас уже 0 силы</string>
    <string name="lack_of_perception_string" translatable="false">У вас уже 0 восприятия</string>
    <string name="lack_of_endurance_string" translatable="false">У вас уже 0 выносливости</string>
    <string name="lack_of_charisma_string" translatable="false">У вас уже 0 харизмы</string>
    <string name="lack_of_intelligence_string" translatable="false">У вас уже 0 интеллекта</string>
    <string name="lack_of_agility_string" translatable="false">У вас уже 0 лоакости</string>
    <string name="lack_of_luck_string" translatable="false">У вас уже 0 удачи</string>
    <string name="points_left_string" translatable="false">У вас остались нераспределённые очки</string>
    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="luck_inv_string">Luck:</string>
    <string name="agility_inv_string">Agility:</string>
    <string name="intelligence_inv_string">Intelligence:</string>
    <string name="charisma_inv_string">Charisma:</string>
    <string name="endurance_inv_string">Endurance:</string>
    <string name="perception_inv_string">Perception:</string>
    <string name="strength_inv_string">Strength:</string>
    <string name="gold_inv_string">Gold:</string>
    <string name="mana_inv_string">Mana:</string>
    <string name="hp_inv_string" translatable="false">HP:</string>
    <string name="click_to_begin_string">Click to begin</string>
    <string name="prologue_string">Prologue</string>
</resources>