<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/chivlary"
    tools:context="com.example.anonymous.myproject.prepare.AbilitiesChoice">

    <TextView
        android:background="#B0000000"
        android:layout_width="match_parent"
        android:layout_height="40sp" />

    <TextView
        android:background="#B0000000"
        android:id="@+id/abilities_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abilities_choice"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <TextView
        android:background="#B0000000"
        android:layout_width="match_parent"
        android:layout_height="40sp" />

    <LinearLayout
        android:background="#B0000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@id/strength_tv_dsc"
            android:text="@string/strength_abilities"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/zero_amount"
            android:id="@+id/strength_tv"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/strength_plus"
            android:text="@string/plus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/strength_minus"
            android:text="@string/minus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:background="#B0000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@id/perception__tv_dsc"
            android:text="@string/perception_abilities"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/zero_amount"
            android:id="@+id/perception_tv"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/perception_plus"
            android:text="@string/plus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/perception_minus"
            android:text="@string/minus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:background="#B0000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@id/endurance_tv_dsc"
            android:text="@string/endurance_abilities"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/zero_amount"
            android:id="@+id/endurance_tv"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/endurance_plus"
            android:text="@string/plus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/endurance_minus"
            android:text="@string/minus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:background="#B0000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@id/charisma_tv_dsc"
            android:text="@string/charisma_abilities"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/zero_amount"
            android:id="@+id/charisma_tv"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/charisma_plus"
            android:text="@string/plus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/charisma_minus"
            android:text="@string/minus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:background="#B0000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@id/intelligence_tv_dsc"
            android:text="@string/intelligence_abilities"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/zero_amount"
            android:id="@+id/intelligence_tv"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/intelligence_plus"
            android:text="@string/plus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/intelligence_minus"
            android:text="@string/minus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:background="#B0000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@id/agility_tv_dsc"
            android:text="@string/agility_abilities"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/zero_amount"
            android:id="@+id/agility_tv"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/agility_plus"
            android:text="@string/plus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/agility_minus"
            android:text="@string/minus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:background="#B0000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@id/luck_tv_dsc"
            android:text="@string/luck_abilities"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/zero_amount"
            android:id="@+id/luck_tv"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/luck_plus"
            android:text="@string/plus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@id/luck_minus"
            android:text="@string/minus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:background="#B0000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/finish_abilities_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_word"/>

    </LinearLayout>

</LinearLayout>