<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/trade"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anonymous.myproject.Trade">

    <ListView
        android:id="@+id/buyList"
        android:layout_width="384dp"
        android:layout_height="180dp"
        android:background="#A0000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/traderName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/trade_tv_back"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyList" />

    <TextView
        android:background="@drawable/trade_tv_back"
        android:textSize="18sp"
        android:textAlignment="center"
        android:id="@+id/buyerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/sellList"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ListView
        android:id="@+id/sellList"
        android:layout_width="384dp"
        android:layout_height="180dp"
        android:background="#A0000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:background="#B0000000"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        app:layout_constraintTop_toBottomOf="@+id/traderName"
        app:layout_constraintBottom_toTopOf="@+id/buyerName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/tradeSumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="0dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tradeExitButton"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tradeTempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="48dp"
            android:text="@string/trade_sum_string"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/tradeDealButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tradeExitButton"
            android:layout_width="108sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="16dp"
            android:text="@string/Exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/tradeDealButton"
            android:layout_width="108sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/trade_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
