<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/chivlary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B0000000"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/inv"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:alpha="0.9"
                android:background="@mipmap/inv"
                android:contentDescription="@string/inv_word" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/journal"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:alpha="0.9"
                android:background="@mipmap/journal"
                android:contentDescription="@string/journal_word" />

            <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/map"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:alpha="0.7"
                android:background="@mipmap/map"
                android:contentDescription="@string/map_word" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:layout_weight="1"
                android:text="@string/inv_word"
                android:textAlignment="textStart" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/journal_word"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15sp"
                android:layout_weight="1"
                android:text="@string/map_word"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="230dp">

            <LinearLayout
                android:id="@+id/scrollLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/forward"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@mipmap/up" />

        <LinearLayout
            android:id="@+id/LL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:orientation="horizontal">

            <Button
                android:id="@+id/left"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="start"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@mipmap/left"/>

            <Button
                android:id="@+id/right"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="100dp"
                android:layout_weight="1"
                android:background="@mipmap/right"/>

        </LinearLayout>

        <Button
            android:id="@+id/back"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@mipmap/down"/>

    </LinearLayout>

</LinearLayout>